WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284305
[JSC] polymorphicThunkFor checks tag in wrong register on armv7
https://bugs.webkit.org/show_bug.cgi?id=284305
Summary
[JSC] polymorphicThunkFor checks tag in wrong register on armv7
Max Rottenkolber
Reported
2024-12-09 10:26:56 PST
On armv7, polymorphicThunkFor wants to check for non-cell values by looking at the tag register, but mistakenly looks at the value register instead. (JSVALUE32_64)
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2024-12-09 12:53:54 PST
Committed
287565@main
(0fc874df0fa9): <
https://commits.webkit.org/287565@main
> Reviewed commits have been landed. Closing PR #37647 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2024-12-09 12:54:13 PST
<
rdar://problem/141174613
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug