[JSC][armv7] Fix JSC:polymorphicThunkFor register usage on armv7 https://bugs.webkit.org/show_bug.cgi?id=284305

Reviewed by Yusuke Suzuki.

This code confused the tag register with the value register when
checking for non-cell callees when using JSVALUE32_64.

Correctly check the tag register instead.

* JSTests/stress/link-polymorphic-call-memory-usage.js: Added.
(samples):
(i.samples.forEach):
* Source/JavaScriptCore/jit/ThunkGenerators.cpp:
(JSC::polymorphicThunkFor):

Canonical link: https://commits.webkit.org/287565@main